methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:24: error: not found: value Dessiner
    Dessiner()
    ^PictureMono2:26: error: not found: value tourPourV
      tourPourV
      ^PictureMono2:78: error: not found: value DebutFin
      DebutFin()
      ^